k8s/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  selector:
    matchLabels:
      app: postgres
      component: postgres
  template:
    metadata:
      labels:
        app: postgres
        component: postgres
    spec:
      volumes:
        - name: postgres-volume
          persistentVolumeClaim:
            claimName: postgres-pvc
      containers:
      - name: postgres
        image: postgres
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5432
        volumeMounts:
          - name: postgres-volume
            mountPath: /var/lib/postgresql/data
            subPath: postgres
