k8s/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
      component: worker
  template:
    metadata:
      labels:
        app: worker
        component: worker
    spec:
      containers:
      - name: worker
        image: samirprakash/multi-tier-docker-worker
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
