k8s/api-cip-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-cip
spec:
  type: ClusterIP
  selector:
    app: api
    component: api
  ports:
  - port: 5000
    targetPort: 5000
