k8s/api-cluster-ip-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  selector:
    app: api
    component: api
  ports:
  - port: 5000
    targetPort: 5000
