k8s/client-cip-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-cip
spec:
  type: ClusterIP
  selector:
    app: client
    component: web
  ports:
  - port: 3000
    targetPort: 3000
