k8s/client-cluster-ip-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: client
spec:
  selector:
    app: client
    component: web
  ports:
  - port: 3000
    targetPort: 3000
