k8s/postgres-cip-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-cip
spec:
  type: ClusterIP
  selector:
    app: postgres
    component: database
  ports:
  - port: 5432
    targetPort: 5432
