k8s/postgres-cluster-ip-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  selector:
    app: postgres
    component: postgres
  ports:
  - port: 5432
    targetPort: 5432
