k8s/redis-cip-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-cip
spec:
  type: ClusterIP
  selector:
    app: redis
    component: redis
  ports:
  - port: 6379
    targetPort: 6379
