k8s/redis-cluster-ip-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  selector:
    app: redis
    component: redis
  ports:
  - port: 6379
    targetPort: 6379
